--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </title>
   </head>
   <body>
-    <div style="height:15% width:100%; position:absolute; top:0; left:0;"> BarneyFeet </div>
+    <div style="height:15% width:100%; position:absolute; top:0; left:0; background-color:black; color:white;"> <div position:absolute; top:50%;>BarneyFeet</div> </div>
     <div style="width 100%; height:200%; position:absolute; top:15%; left:0;">(text here)</div>
   </body>
  </html>
