--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </title>
   </head>
   <body>
-    <div style="xposition:absolute; top:0; left:0; background-color:black; color:white; height:15%; width:100%;"> <div style="position:absolute; top:50%;">BarneyFeet</div> </div>
-    <div style="width 100%; height:200%; position:absolute; top:15%; left:0;">(text here)</div>
+    <div style="xposition:absolute; top:0; left:0; background-color:black; color:white; height:15%; width:100%;"> <div style="position:absolute; top:50%; color:white;">BarneyFeet</div> </div>
+    <div style="width 100%; height:200%; position:absolute; top:16%; left:0;">(text here)</div>
   </body>
  </html>
